Bug 256994 Error in "intl/src/mac" when trying to build Firefox with Apple GCC-3.5-tree-ssa patch by mcsmurf@gmx.de r=smontagu sr=smfr